@@ -17,6 +17,8 @@
  * Contents:
  *
  *   cupsBackendDeviceURI() - Get the device URI for a backend.
+ *   cupsBackendReport()    - Write a device line from a backend.
+ *   quote_string()         - Write a quoted string to stdout, escaping \ and ".
  */
 
 /*
@@ -26,6 +28,13 @@
 #include <stdlib.h>
 #include "backend.h"
 #include "globals.h"
+
+
+/*
+ * Local functions...
+ */
+
+static void	quote_string(const char *s);
 
 
 /*
@@ -54,6 +63,65 @@ cupsBackendDeviceURI(char **argv)	/* I - Command-line arguments */
 
   return (_httpResolveURI(device_uri, cg->resolved_uri,
                           sizeof(cg->resolved_uri), 1));
+}
+
+
+/*
+ * 'cupsBackendReport()' - Write a device line from a backend.
+ *
+ * This function writes a single device line to stdout for a backend.
+ * It handles quoting of special characters in the device-make-and-model,
+ * device-info, device-id, and device-location strings.
+ */
+
+void
+cupsBackendReport(
+    const char *device_scheme,		/* I - device-scheme string */
+    const char *device_uri,		/* I - device-uri string */
+    const char *device_make_and_model,	/* I - device-make-and-model string or @code NULL@ */
+    const char *device_info,		/* I - device-info string or @code NULL@ */
+    const char *device_id,		/* I - device-id string or @code NULL@ */
+    const char *device_location)	/* I - device-location string or @code NULL@ */
+{
+  if (!device_scheme || !device_uri)
+    return;
+
+  printf("%s %s", device_scheme, device_uri);
+  if (device_make_and_model && *device_make_and_model)
+    quote_string(device_make_and_model);
+  else
+    quote_string("unknown");
+  quote_string(device_info);
+  quote_string(device_id);
+  quote_string(device_location);
+  putchar('\n');
+  fflush(stdout);
+}
+
+
+/*
+ * 'quote_string()' - Write a quoted string to stdout, escaping \ and ".
+ */
+
+static void
+quote_string(const char *s)		/* I - String to write */
+{
+  fputs(" \"", stdout);
+
+  if (s)
+  {
+    while (*s)
+    {
+      if (*s == '\\' || *s == '\"')
+	putchar('\\');
+
+      putchar(*s);
+
+      s ++;
+    }
+  }
+
+  putchar('\"');
 }
 
 
