@@ -2043,9 +2043,14 @@ string for the device.</p>
 <p>The device-info attribute specifies a human-readable string describing
 the device, e.g. "Parallel Port #1".
 
+<h4><a name="device-location">device-location (text(127))</a><span class="info">CUPS 1.4</span></h4>
+
+<p>The device-location attribute specifies the physical location of the
+printer.
+
 <h4><a name="device-make-and-model">device-make-and-model (text(127))</a></h4>
 
-<p>The device-makr-and-model attribute specifies a device
+<p>The device-make-and-model attribute specifies a device
 identification string provided by the printer connected to the device.
 If the device or printer does not support identification then this
 attribute contains the string "unknown".
